# signal-deck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  agents.md  agents.md — Signal Deck Project Guidan  eslint.config.js  ha_python_shell_plan.md  hacs.json  package-lock.json  package.json  rollup.config.js  tsconfig.json  vitest.config.ts
crates/shell-engine/: Cargo.toml
crates/shell-engine/src/: engine.rs  icons.rs  lib.rs  magic.rs  monty_runtime.rs  render.rs  session.rs
docs/: index.html
src/: signal-deck.ts
src/assistant/: analyst-panel.ts  analyst-session.ts  parser.ts
src/components/: entity-renderers.ts
src/components/entities/: automation.ts  binary-sensor.ts  calendar.ts  climate.ts  cover.ts  generic.ts  helpers.ts  light.ts  media-player.ts  person.ts  sensor.ts  weather.ts
src/engine/: wasm-bridge.ts
src/host/: host-functions.ts
src/host/__tests__/: host-functions.test.ts
src/types/: ha.ts  index.ts  render.ts
src/types/__tests__/: render.test.ts
src/utils/: highlight.ts
