[package]
name = "signal-deck-engine"
version = "0.1.0"
edition = "2024"
description = "Signal Deck shell engine — REPL, magics, render specs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
monty = { git = "https://github.com/pydantic/monty.git", tag = "v0.0.4" }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
